<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBackground"
    android:orientation="vertical">

    <!--APP首页图片-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="330dp"
        android:src="@drawable/waittologinimg"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:paddingTop="150dp"/>

    <!--首页标题-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waitToLogin_title"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:paddingTop="20dp"/>

    <!-- 按钮 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center">

        <!-- 登录按钮 -->
        <Button
            android:id="@+id/btn_WaitToLogin_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waitToLogin_login"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_selector"/>

        <!-- 注册按钮 -->
        <Button
            android:id="@+id/btn_WaitToLogin_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waitToLogin_Register"
            android:background="@drawable/btn_selector"/>

    </LinearLayout>
</LinearLayout>