<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 状态栏过渡 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/MainBackground"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <!-- 返回按钮 -->
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:background="@color/MainBackground"
            android:src="@drawable/img_back" />

        <!-- 标题：个人信息 -->
        <TextView
            android:layout_width="385dp"
            android:layout_height="40dp"
            android:background="@color/MainBackground"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:paddingLeft="-30dp"
            android:shadowColor="@color/register_title_shadow"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="3"
            android:text="@string/me_personInfo"
            android:textColor="@color/register_topColor"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- 我的头像 -->
        <LinearLayout
            android:id="@+id/liner_updateUserHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- 文字 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/myInfo_headImg"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:textSize="20sp"/>

            <!-- 图片 -->
            <ImageView
                android:id="@+id/iv_head"
                android:layout_marginLeft="170dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/my_headpicture"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent"
                android:src="@drawable/myinfo_enter"/>


        </LinearLayout>

        <!-- 分割线 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/navigation_border"/>

        <!-- 用户名 -->
        <LinearLayout
            android:id="@+id/liner_updateUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- 文字 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/myInfo_userName"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:textSize="20sp"/>

            <!-- 具体信息 -->
            <TextView
                android:id="@+id/tv_updateUserNameText"
                android:layout_marginLeft="45dp"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:gravity="right|center"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_marginLeft="5dp"
                android:layout_height="match_parent"
                android:src="@drawable/myinfo_enter"/>

        </LinearLayout>

        <!-- 分割线 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/navigation_border"/>

        <!-- 性别 -->

        <LinearLayout
            android:id="@+id/liner_updateUserGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- 文字 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/myInfo_userGender"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:textSize="20sp"/>

            <!-- 具体信息 -->
            <TextView
                android:id="@+id/tv_updateUserGenderText"
                android:layout_marginLeft="205dp"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:gravity="center|right"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_marginLeft="6dp"
                android:layout_height="match_parent"
                android:src="@drawable/myinfo_enter"/>

        </LinearLayout>

        <!-- 分割线 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/navigation_border"/>

        <!-- 手机号 -->

        <LinearLayout
            android:id="@+id/liner_updateUserTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- 文字 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/myInfo_userTel"
                android:layout_marginLeft="20dp"
                android:gravity="center|right"
                android:textSize="20sp"/>

            <!-- 具体信息 -->
            <TextView
                android:id="@+id/tv_userTelText"
                android:layout_marginLeft="160dp"
                android:layout_width="115dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:gravity="center"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_marginLeft="6dp"
                android:layout_height="match_parent"
                android:src="@drawable/myinfo_enter"/>

        </LinearLayout>

        <!-- 分割线 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/navigation_border"/>

        <!-- 手机号 -->

        <LinearLayout
            android:id="@+id/liner_updateUserIdentifyCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- 文字 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="身份证号"
                android:layout_marginLeft="20dp"
                android:gravity="center|right"
                android:textSize="20sp"/>

            <!-- 具体信息 -->
            <TextView
                android:id="@+id/userIdentifyCardText"
                android:layout_marginLeft="55dp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:gravity="center|right" />

            <ImageView
                android:layout_width="30dp"
                android:layout_marginLeft="6dp"
                android:layout_height="match_parent"
                android:src="@drawable/myinfo_enter"/>

        </LinearLayout>

        <!-- 分割线 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/navigation_border"/>

        <!-- 修改密码 -->

        <LinearLayout
            android:id="@+id/liner_updateUserPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- 文字 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="修改密码"
                android:layout_marginLeft="20dp"
                android:gravity="center|right"
                android:textSize="20sp"/>

            <!-- 具体信息 -->
            <TextView
                android:layout_marginLeft="55dp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:gravity="center|right" />

            <ImageView
                android:layout_width="30dp"
                android:layout_marginLeft="6dp"
                android:layout_height="match_parent"
                android:src="@drawable/myinfo_enter"/>

        </LinearLayout>

        <!-- 分割线 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/navigation_border"/>

        <!-- 退出按钮 -->
        <Button
            android:id="@+id/bt_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_selector"
            android:text="退出登录"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>



</LinearLayout>